[package]
name = "ghi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.0", features = ["sqlite", "chrono"] }
diesel_migrations = { version = "2.1.0", features = ["sqlite"] }
anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["derive"] }
crossterm = "0.27.0"
dirs = "5.0.1"
fuzzy-matcher = "0.3.7"
rand = "0.8.5"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tempfile = "3.9.0"
chrono = "0.4.33"
dotenv = "0.15.0"
log = "0.4.20"
toml = "0.8.10"
tracing = { version = "0.1.40", features = ["log"] }
uuid = { version = "1.7.0", features = ["v4"] }
tracing-subscriber = "0.3.18"
